--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@creativebulma/bulma-collapsible": "^1.0.4",
+    "@creativebulma/bulma-divider": "^1.1.0",
+    "buefy": "^0.9.4",
+    "bulma": "^0.9.1",
     "core-js": "^3.6.5",
+    "firebase": "^8.2.1",
+    "joi": "^17.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuexfire": "^3.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -40,7 +47,23 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "no-unused-vars": "off",
+      "camelcase": [2, {"properties": "never"}],
+      "prefer-destructuring": [
+        "error",
+        {
+          "object": true,
+          "array": false
+        }
+      ],
+      "no-param-reassign": [
+        2,
+        {
+          "props": false
+        }
+      ]
+    }
   },
   "browserslist": [
     "> 1%",
